--- a/bot.html
+++ b/bot.html
@@ -67,7 +67,7 @@
             <div class="card-header">Informações do Jogador</div>
             
             <p class="card-text">   <div class="progress mt-2" style="display:none">
-          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+          <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
         </div><div id="result"></div></p>
           </div>
         </div>
