--- a/bot.html
+++ b/bot.html
@@ -64,10 +64,10 @@
         <div class="card w-100 border border-info rounded">
           <div class="card-body">
               
-            <div class="card-header">Informações do Jogador</div>
+            <div class="card-header bg-info text-white"">Informações do Jogador</div>
             
             <p class="card-text">   <div class="progress mt-2" style="display:none">
-          <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+          <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
         </div><div id="result"></div></p>
           </div>
         </div>
